@@ -1,0 +1,4 @@
+## Introduction
+
+This directory contains source files each of which implements a syntax
+extension.
