@@ -1,0 +1,24 @@
+(defsystem "eclector.syntax-extensions"
+  :description "A collection of extensions to the Common Lisp syntax."
+  :license     "BSD"
+  :author      "Jan Moringen <jmoringe@techfak.uni-bielefeld.de>"
+
+  :version     (:read-file-form "version.sexp")
+  :depends-on  ("eclector")
+
+  :components  ((:module "syntax-extensions"
+                 :pathname "code/syntax-extensions"))
+
+  :in-order-to ((test-op (test-op "eclector.syntax-extensions/test"))))
+
+(defsystem "eclector.syntax-extensions/test"
+  :depends-on  ("eclector.syntax-extensions"
+                (:version "fiveam" "1.4"))
+
+  :components  ((:module "syntax-extensions"
+                 :pathname "test/syntax-extensions"
+                 :serial t
+                 :components ((:file "package"))))
+
+  :perform     (test-op (operation component)
+                 (uiop:symbol-call '#:eclector.syntax-extensions.test '#:run-tests)))
