@@ -30,6 +30,10 @@ Release 0.10 (not yet released)
   not documented. For now, the new mechanism also remains undocumented so that
   the design can be validated through experimentation before it is finalized.
 
+* The new syntax-extensions module contains a collection of syntax extensions
+  which are implemented as either mixin classes for clients or reader macro
+  functions.
+
 Release 0.9 (2023-03-19)
 
 * The deprecated function ECLECTOR.CONCRETE-SYNTAX-TREE:CST-READ has been
